fixed overflow on textBox

--- a/src/styles.css
+++ b/src/styles.css
@@ -64,8 +64,9 @@ button {
 }
 
 .text-box {
-  overflow: auto;
+  overflow-y: auto;
   flex: 1;
+  word-wrap: break-word;
 }
 
 #user-input-form {
